# VisualReasonBench

./: .env.example  .gitignore  DEVELOPER_GUIDE.md  DEVELOPER_GUIDE_en.md  HANDOVER.md  IMPLEMENTATION_SUMMARY.md  README.md  README_TASK_DEVELOPMENT.md  StackingGame_summary.md  TODO.md  Task.md  auto_create_collision_mesh.py  demo_phyvpuzzle_integration.py  env_example.txt  four_metrics_results.json  metrics_test_results.json  pyproject.toml  requirements.txt  run_domino_demo.py  run_interactive_test.sh  run_interactive_test_guide.md  start_luban.py  test_comprehensive_metrics.py  test_environment_only.py  test_four_metrics.py  test_gpt4o_phyvpuzzle.py  test_gpt4o_real_env.py  test_gpt4o_robust.py  test_gpt4o_simple.py  test_metrics_standalone.py  test_path_fix.py  test_phyvpuzzle_integration.py  test_very_easy_quick.py
Blender/: 15-piece-luban.blend  interlocking-puzzle-cube.blend  liliput.blend  luban-12-piece-final.blend  luban-3-piece.blend  luban-6-piece.blend  luban-diagonal-6-piece.blend  tangled-nails.blend  three plate burr puzzle.blend
Stacking_scaling/: README.md  debug_2x2x3.py  debug_2x2x3_batch.py  polypuzzle_batch.py
configs/: default_config.json
docs/: BLENDER.md  DEVELOPER_GUIDE.md  DOMINO_TASK_REPORT.md  ENVIRONMENT_HARNESS.md  METRICS_IMPLEMENTATION.md  README_COMPLETE.md  README_PhyVPuzzle_Integration.md  code_structure.md  index.html
eval_configs/: domino_quick.yaml  human_puzzle_test.yaml  luban.yaml  puzzle_quick.yaml  puzzle_translater.yaml  stacking.yaml  stacking_game_222.yaml  stacking_game_222_pairwise_judge.yaml  stacking_game_222_reward_model.yaml  stacking_game_222_seed.yaml  stacking_game_223.yaml  stacking_game_223_seed.yaml  stacking_game_234.yaml  stacking_game_234_seed.yaml  stacking_game_244.yaml  stacking_game_244_seed.yaml  stacking_game_333.yaml  stacking_game_333_seed.yaml  stacking_game_334.yaml  stacking_game_334_seed.yaml  stacking_game_344.yaml  stacking_game_344_seed.yaml  stacking_game_444.yaml  stacking_game_444_seed.yaml
examples/: basic_usage.py  domino_quick.py  examples_unified.py  grid_snap_demo.py  human_with_actions.py  luban_example.py  puzzle_primitives_demo.py  puzzle_quick.py  puzzle_translater.py  stacking_game_test.py  unified_puzzle_env.py
notebooks/: luban_load_demo.ipynb  test.ipynb
(+160 files in other folders)
